feat(cc): add basic logging mechanism, refactor(cc): make code more safety (#5)
* feat(ContenCamera): add basic logs

* refactor: move queue to the c++ class

* refactor: create separate logger class

* shutdown logger

--- a/Filters/Filters.vcxproj
+++ b/Filters/Filters.vcxproj
@@ -92,7 +92,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <LanguageStandard>stdcpp14</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)third\spdlog\include;$(SolutionDir)third\magic_enum\include;$(DirectShowSamplesDir)\baseclasses</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -121,8 +122,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Repos\stb\Windows-classic-samples\Samples\Win7Samples\multimedia\directshow\baseclasses;C:\Users\sylwe\Downloads\boost_1_79_0\boost_1_79_0;C:\libs\websocketpp;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <LanguageStandard>stdcpp14</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)third\spdlog\include;$(SolutionDir)third\magic_enum\include;$(DirectShowSamplesDir)\baseclasses</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -150,6 +151,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)third\spdlog\include;$(SolutionDir)third\magic_enum\include;$(DirectShowSamplesDir)\baseclasses</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -177,6 +180,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)third\spdlog\include;$(SolutionDir)third\magic_enum\include;$(DirectShowSamplesDir)\baseclasses</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Midl>
       <SuppressStartupBanner>true</SuppressStartupBanner>
@@ -203,17 +208,20 @@
   <ItemGroup>
     <ClCompile Include="Dll.cpp" />
     <ClCompile Include="Filters.cpp" />
-    <ClCompile Include="Placeholder.cpp" />
-    <ClCompile Include="shared-memory-queue.c" />
+    <ClCompile Include="logger.cpp" />
+    <ClCompile Include="placeholder.cpp" />
+    <ClCompile Include="shared_memory_queue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="Filters.def" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="constants.hpp" />
     <ClInclude Include="Filters.h" />
-    <ClInclude Include="Message.h" />
-    <ClInclude Include="Placeholder.h" />
-    <ClInclude Include="shared-memory-queue.h" />
+    <ClInclude Include="logger.hpp" />
+    <ClInclude Include="message.hpp" />
+    <ClInclude Include="placeholder.hpp" />
+    <ClInclude Include="shared_memory_queue.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
