--- a/Filters/Filters.vcxproj
+++ b/Filters/Filters.vcxproj
@@ -220,6 +220,7 @@
     <ClInclude Include="Filters.h" />
     <ClInclude Include="logger.hpp" />
     <ClInclude Include="message.hpp" />
+    <ClInclude Include="message_client.hpp" />
     <ClInclude Include="placeholder.hpp" />
     <ClInclude Include="shared_memory_queue.hpp" />
   </ItemGroup>
